# arcanum-sdk-rs

./: Cargo.toml  README.md
src/: ethers_adapter.rs  lib.rs  multipool_math.rs
src/multipool_math/: core_math.rs  mod.rs
src/multipool_math/actions/: adapter.rs  computation.rs  mod.rs  settings.rs  setup.rs  tests.rs
src/num/: mod.rs  num.rs  snum.rs  uint256.rs  uint512.rs
src/num/utils/: mod.rs  strings.rs
src/tests/: actions.rs  mod.rs  multipool_math.rs
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs
