[package]
name = "arcanum-sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["web3", "arcanum", "sdk", "swap", "ethers"]
homepage = "https://arcanum.to"
repository = "https://github.com/arcanum-protocol/arcanum-sdk-rs"
readme = "README.md"
description = "An SDK for arcanum protocol written in rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
uint = "0.9.3"
borsh = "0.10.3"
ethers = "2.0.7"
hex = "0.4.3"
async-trait="0.1.71"
anyhow = "1.0.71"

[dev-dependencies]
pretty_assertions = "1.3.0"
